<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/textNombreBebida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_nombre_bebida"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="1"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/textVolumen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/volumen"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintEnd_toStartOf="@id/textGraduacionAlcohol"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/textGraduacionAlcohol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item_graduacion_alcohol"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/textVolumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>