<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewBebidasAlcoholicas"
        android:layout_width="match_parent"
        tools:background ="@color/orange_2"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textCalculadora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculadora"
            android:textSize="40sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintEnd_toEndOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textBebidasAlcoholicas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bebidas_alcoholicas"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintEnd_toEndOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintTop_toBottomOf="@id/textCalculadora"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonAgregarBebida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_agregar_bebida"
            app:fabSize="mini"
            app:backgroundTint="@color/blue"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="@id/textBebidasAlcoholicas"
            app:layout_constraintBottom_toBottomOf="@id/textBebidasAlcoholicas"
            app:layout_constraintStart_toEndOf="@id/textBebidasAlcoholicas"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBebidasAlcoholicas"
            android:layout_width="380dp"
            android:layout_height="0dp"
            android:text="@string/sin_bebidas"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintEnd_toEndOf="@id/viewBebidasAlcoholicas"
            app:layout_constraintTop_toBottomOf="@+id/textBebidasAlcoholicas"
            app:layout_constraintBottom_toTopOf="@id/buttonCalcular"
            android:layout_marginTop="8dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textTiempoDesdePrimeraBebida"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tiempo_desde_primera_bebida"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editHorasPrimeraBebida"
            app:layout_constraintTop_toTopOf="@id/editHorasPrimeraBebida"
            app:layout_constraintBottom_toBottomOf="@id/editHorasPrimeraBebida" />

        <EditText
            android:id="@+id/editHorasPrimeraBebida"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="3 horas"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/textTiempoDesdePrimeraBebida"
            app:layout_constraintEnd_toStartOf="@id/editMinutosPrimeraBebida"
            app:layout_constraintTop_toBottomOf="@id/recyclerBebidasAlcoholicas"
            app:layout_constraintBottom_toTopOf="@id/buttonCalcular" />

        <EditText
            android:id="@+id/editMinutosPrimeraBebida"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="0 minutos"
            android:gravity="center"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@id/editHorasPrimeraBebida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/editHorasPrimeraBebida"
            app:layout_constraintBottom_toBottomOf="@id/editHorasPrimeraBebida" />


        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/calcular"
            app:backgroundTint="@color/blue"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editHorasPrimeraBebida"
            app:layout_constraintBottom_toBottomOf="@id/viewBebidasAlcoholicas"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewResultados"
        android:layout_width="match_parent"
        tools:background ="@color/blue"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewBebidasAlcoholicas"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textGramosPorLitro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gramos_por_litro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@id/resultGramosPorLitro"
            app:layout_constraintBottom_toBottomOf="@id/resultGramosPorLitro" />

        <TextView
            android:id="@+id/resultGramosPorLitro"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:visibility="visible"
            android:text="0.25 g/L"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textMiligramosPorLitroDeAire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miligramos_por_litro_aire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@id/resultMiligramosPorLitroDeAire"
            app:layout_constraintBottom_toBottomOf="@id/resultMiligramosPorLitroDeAire" />

        <TextView
            android:id="@+id/resultMiligramosPorLitroDeAire"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:visibility="visible"
            android:text="0.25 mg/L"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultGramosPorLitro"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/textBAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bac"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@id/resultBAC"
            app:layout_constraintBottom_toBottomOf="@id/resultBAC"
            />

        <TextView
            android:id="@+id/resultBAC"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:visibility="visible"
            android:text="0.025%"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultMiligramosPorLitroDeAire"
            android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>